--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -740,6 +740,10 @@ mat-icon {
   &.orange {
     color: var(--orange) !important;
   }
+
+  &.purple {
+    color: var(--purple) !important;
+  }
 }
 
 button {
