--- a/src/app/features/modals/settings/about-modal/about-modal.component.scss
+++ b/src/app/features/modals/settings/about-modal/about-modal.component.scss
@@ -63,9 +63,11 @@
     }
 
     .app-team {
+      display: flex;
+      align-items: center;
+      gap: var(--space-xxs);
       color: var(--secondary-text-color);
       margin-bottom: var(--space-md);
-      text-align: center;
     }
 
     .version-info {
