--- a/src/app/shared/remote-config/flag-config-step/flag-config-step.component.scss
+++ b/src/app/shared/remote-config/flag-config-step/flag-config-step.component.scss
@@ -41,10 +41,7 @@ form {
     margin: 16px 0 8px 0;
   }
 
-  .bisync-options,
-  .move-options,
-  .copy-sync-options {
-    margin: 16px 0;
+  .options {
     padding: 16px;
     border-radius: 8px;
     background-color: var(--secondary-background);
